--- a/Multi_Animal_Classification.ipynb
+++ b/Multi_Animal_Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNniR2uKa5i9ZaMw7oMV/up",
+      "authorship_tag": "ABX9TyNQ/swGjgrltq6V4u7a4QJ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,212 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "0Z1s0eJeGamc"
       },
       "outputs": [],
       "source": [
-        "import tensorflow as tf"
+        "# import libraries - data science\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import tensorflow as tf\n",
+        "import random\n",
+        "\n",
+        "\n",
+        "# import libraries - visualization\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# import libraries - system\n",
+        "import os\n",
+        "from pathlib import Path\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install opendatasets"
+      ],
+      "metadata": {
+        "id": "7PWO9xTYOFMg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# seeding everyting to reproduce results for future cases\n",
+        "def seed(seed=42):\n",
+        "    random.seed(seed)\n",
+        "    np.random.seed(seed)\n",
+        "    tf.random.set_seed(seed)\n",
+        "\n",
+        "seed()\n"
+      ],
+      "metadata": {
+        "id": "1pj3tVhQNZ2g"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# data\n",
+        "BATCH_SIZE = 32\n",
+        "IMG_SIZE = (224, 224)"
+      ],
+      "metadata": {
+        "id": "wNiDEEcmSeb3"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import opendatasets as od\n",
+        "od.download('https://www.kaggle.com/datasets/alessiocorrado99/animals10/data?select=raw-img')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xY_bpMTSOjJ1",
+        "outputId": "19a349e9-5f2d-401e-ef68-df7bd5c0ac83"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please provide your Kaggle credentials to download this dataset. Learn more: http://bit.ly/kaggle-creds\n",
+            "Your Kaggle username: eddiechn1\n",
+            "Your Kaggle Key: ··········\n",
+            "Dataset URL: https://www.kaggle.com/datasets/alessiocorrado99/animals10\n",
+            "Downloading animals10.zip to ./animals10\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 586M/586M [00:03<00:00, 164MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from translate import translate\n",
+        "print(translate)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QXlj5LUNUVVm",
+        "outputId": "b3b3e8e6-63cd-432c-9942-8745f7036529"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'cane': 'dog', 'cavallo': 'horse', 'elefante': 'elephant', 'farfalla': 'butterfly', 'gallina': 'chicken', 'gatto': 'cat', 'mucca': 'cow', 'pecora': 'sheep', 'scoiattolo': 'squirrel', 'dog': 'cane', 'elephant': 'elefante', 'butterfly': 'farfalla', 'chicken': 'gallina', 'cat': 'gatto', 'cow': 'mucca', 'spider': 'ragno', 'squirrel': 'scoiattolo'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset_dir = 'animals10/raw-img'"
+      ],
+      "metadata": {
+        "id": "2OA0KzZCYGUL"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset = tf.keras.preprocessing.image_dataset_from_directory(\n",
+        "    dataset_dir,\n",
+        "    batch_size = BATCH_SIZE,\n",
+        "    image_size = IMG_SIZE,\n",
+        "    label_mode='int'\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "arKHTsBbYVZj",
+        "outputId": "461ef134-e71b-4858-97f3-d5def50cd53f"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 26179 files belonging to 10 classes.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "07C0RGuaZMul",
+        "outputId": "0cb13e9e-298d-49d5-ab0a-9a3381a5b976"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<_PrefetchDataset element_spec=(TensorSpec(shape=(None, 224, 224, 3), dtype=tf.float32, name=None), TensorSpec(shape=(None,), dtype=tf.int32, name=None))>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import PIL\n",
+        "from pathlib import Path\n",
+        "from PIL import UnidentifiedImageError\n",
+        "from PIL import Image\n"
+      ],
+      "metadata": {
+        "id": "9l5UdHuwS84N"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
